--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 
 		<link rel="stylesheet" href="assets/angular-material.min.css"/>
 		<link rel="stylesheet" href="assets/app.css"/>
-		<base href="http://localhost/Mahjong-Mayhem/dist/"></base>
+		<base href="http://angular.local/"></base>
 	</head>
 
 	<body layout="column" ng-controller="UserController as ul">
