--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,8 @@
 
 		<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
 
-		<link rel="stylesheet" href="assets/angular-material.min.css"/>
-		<link rel="stylesheet" href="assets/app.css"/>
+		<link rel="stylesheet" href="/assets/angular-material.min.css"/>
+		<link rel="stylesheet" href="/assets/app.css"/>
 		<base href="http://angular.local/"></base>
 	</head>
 
@@ -31,5 +31,5 @@
 	           display the full url for learning purposes
 	    </pre> -->
 	</body>
-	<script src="js/app.js"></script>
+	<script src="/js/app.js"></script>
 </html>
