--- a/app/index.html
+++ b/app/index.html
@@ -29,4 +29,5 @@
 
 	</body>
 	<script src="/js/app.js"></script>
+	<script src="http://mahjongmayhem.herokuapp.com/socket.io/socket.io.js"></script>
 </html>
