--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="MahjongMayhem">
+<html lang="en" ng-app="MahjongMayhem" ng-controller="CssController as cssc">
 	<head>
 		<!-- <title>Angular Material - Starter App</title> -->
 	<title update-title></title>
@@ -14,7 +14,8 @@
 		<link rel="stylesheet" href="/assets/angular-material.min.css"/>
 		<!-- http://zavoloklom.github.io/material-design-iconic-font/icons.html -->
 		<link rel="stylesheet" href="/assets/material-design-iconic-font/css/material-design-iconic-font.min.css"/>
-		<link rel="stylesheet" href="/assets/app.css"/>
+		<link rel="stylesheet" href="/css/app.css"/>
+		<link rel="stylesheet" href="/css/theme-blue.css" ng-if="cssc.isBlue()"/>
 
 		<base href="http://angular.local/"></base>
 	</head>
